--- a/src/main/webapp/WEB-INF/vm/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/apply.vm
@@ -1,4 +1,16 @@
 #set($layout = "layout/layout.vm")
+<style type="text/css">
+td input{
+	width: 100%;
+	text-align: center;
+	color: red;
+	font-size: larger;
+}
+td {
+	text-align: center;
+}
+</style>
+<div id="common-notice-dialog" class="hide"></div>
 <div class="col-xs-12">
 <!-- PAGE CONTENT BEGINS -->
 <div style="text-align: center" class="col-xs-9">
@@ -11,41 +23,50 @@
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>申请人</td>
-                <td><input type="text" style="width: 100%"></td>
-                <td>人员编号</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="user_name"></td>
+                <td>员工编号</td>
+                <td><input type="text" id="sn"></td>
                 <td>申请日期</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="cur_time"  style="color:red"></td>
             </tr>
             <tr>
                 <td>一级部门</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="dept_level1"></td>
                 <td>申请部门</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="dept_level2"></td>
                 <td>部门编号</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="depa_sn"></td>
             </tr>
             <tr>
-                <td>是否直接向vp汇报</td>
-                <td><input type="text" style="width: 100%"></td>
+            	<td>是否直接向VP汇报</td>
+                <td><form action="" method="get">
+                <input name="Fruit" type="radio" style="width:25% !important"/><span style="width:10%">是</span>
+                <input name="Fruit" type="radio" checked="true" style="width:25% !important"/><span style="width:10%">否</<span>
+                </form></td>
                 <td>银行卡号</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="bank_no"></td>
                 <td>银行开户行</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="bank_name"></td>
             </tr>
             <tr>
                 <td>是否有借款</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td>
+                <form action="" method="get">
+                <input name="Fruit" type="radio" style="width:25% !important"/><span style="width:10%">是</span>
+                <input name="Fruit" type="radio" checked="true" style="width:25% !important"/><span style="width:10%">否</<span>
+                </form>
+                </td>
                 <td>借款单流水号</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="debt_no"></td>
                 <td>借款金额</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" id="debt_count"></td>
             </tr>
+            <tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>报销金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -68,21 +89,24 @@
                 <td>备注</td>
             </tr>
             <tr>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><span class="input-icon input-icon-right">
+                <input id="c_date_from1" type="text"/>
+                <i class="icon-calendar green"></i>
+            </span></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
             </tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -95,9 +119,9 @@
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text"></td>
                 <td>备注(话费实际发生月份)</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -121,21 +145,24 @@
                 <td>备注</td>
             </tr>
             <tr>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
+            <td><span class="input-icon input-icon-right">
+            <input id="t_date_from1" type="text"/>
+            <i class="icon-calendar green"></i>
+        </span></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
             </tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -157,19 +184,22 @@
                 <td>金额</td>
             </tr>
             <tr>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
+            <td><span class="input-icon input-icon-right">
+            <input id="z_date_from1" type="text"/>
+            <i class="icon-calendar green"></i>
+        </span></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
             </tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -189,18 +219,21 @@
                 <td>备注</td>
             </tr>
             <tr>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
+            <td><span class="input-icon input-icon-right">
+            <input id="y_date_from1" type="text"/>
+            <i class="icon-calendar green"></i>
+        </span></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
             </tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -218,15 +251,15 @@
                 <td>备注</td>
             </tr>
             <tr>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
             </tr>
         </table>
         <table style="border-collapse:collapse;" border="1" class="col-xs-9">
             <tr>
                 <td>金额总计</td>
-                <td><input type="text" style="width: 100%"></td>
+                <td><input type="text" value="0"></td>
             </tr>
         </table>
     </div>
@@ -260,76 +293,67 @@
 </div>
 
 </div>
+<div class="row">
+<div class="col-sm-12">
+<div style="float:right;margin-top:20px;margin-bottom:10px; margin-right:30%;">
+<button class="btn btn-info" type="button"
+        onclick="submitPhoneFormRight(true);">
+    <i class="icon-arrow-right bigger-110"></i>
+    保存并提交
+</button>
+<button class="btn btn-info" type="button"
+        onclick="submitPhoneFormRight(false);">
+    <i class="icon-arrow-up bigger-110"></i>
+    暂存草稿
+</button>
+<button class="btn" type="reset">
+    <i class="icon-undo bigger-110"></i>
+    取消申请
+</button>
+</div>
 
+<script src="static/js/utils.js"></script>
+<script src="static/js/dialog_common.js"></script>
+<script src="assets/js/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 
 jQuery(function ($) {
-    $.ajax({
-        dataType: 'json',
-        url: 'approve/get_process',
-        type: "GET",
-        success: function (resp) {
-        	console.log(resp);
-            var id = "key";
-            var len = resp.length;
-            //$("#" + id).find("option").remove();
-            //var opstr = $.parseStr('<option value="%s" selected="selected">%s</option>', value, value);
-            //$("#" + id).append(opstr);
-            var r_len = resp.length;
-            for (var i = 0; i < r_len; i++) {
-                opstr = $.parseStr('<option value="%s">%s</option>', resp[i], resp[i]);
-                $("#" + id).append(opstr);
-            }
-        },
-        error: function (jqXHR, textStatus, errorThrown) {
-            alert('网络错误，请刷新后重试!');
-        }
-    })
-
+//	$.ajax({
+//		contentType: "application/json; charset=utf-8",
+//		dataType: 'json',
+//		url: "admin/employeeinfo",
+//		type: "GET",
+//        success: function (resp) {
+//			console.log(resp);
+//        	if(resp.errorCode == 0){
+//        		var data = resp.data;
+//        		$("#user_name").val(data[0]);
+//        		$("#sn").val(data[1]);
+//        		$("#cur_time").val(data[2]);
+//        		$("#dept_level1").val(data[3]);
+//        		$("#dept_level2").val(data[4]);
+//        	}else{
+//        		showCommonNoticeDialog('失败', 'icon-warning-sign',
+//        		        generateNoticeMsg(resp.errorMessage), 300);
+//        	}
+//        },
+//        error: function (jqXHR, textStatus, errorThrown) {
+//        	showCommonNoticeDialog('网络错误', 'icon-bolt',
+//        	        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+//        }
+//    })
+    $("#c_date_from1").on('click', function () {
+        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+    });
+	$("#t_date_from1").on('click', function () {
+        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+    });
+	$("#z_date_from1").on('click', function () {
+        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+    });
+	$("#y_date_from1").on('click', function () {
+        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+    });
 });
-function add_process_list() {
-	var expre = /http(s)?:////([\w-]+\.)+[\w-]+(\/[\w- .\/?%&=]*)?/; 
-	var regexp = new RegExp(expre); 
-	var url = $("#url").val();
-	if(!regexp.test(url)){
-		alert("url地址错误或含有非法字符，请检查");
-		return;
-	}
-    var params = {
-        "key": $("#key").val(),
-        "type": $("#type").val(),
-        "url": $("#url").val(),
-        "name": $("#name").val()
-    }
-    
-    $.ajax({
-        contentType: "application/json; charset=utf-8",
-        url: 'approve/add/process',
-        type: "POST",
-        data: JSON.stringify(params),
-        success: function (resp) {
-            console.log(resp.data);
-            alert(resp.data);
-            window.location.reload();
-        },
-        error: function (jqXHR, textStatus, errorThrown) {
-            alert('网络错误，请刷新后重试!');
-        }
-    })
-}
-function onDelete(value){
-	if (confirm("确认删除！")) window.location = "approve/delete?key=" + value ;
-}
-
-//替换方法
-(function ($) {
-    $.parseStr = function (str) {
-        var args = [].slice.call(arguments, 1),
-                i = 0;
-        return str.replace(/%s/g, function () {
-            return args[i++];
-        });
-    }
-})(jQuery);
 	
 </script>
