--- a/src/main/webapp/WEB-INF/vm/process_list.vm
+++ b/src/main/webapp/WEB-INF/vm/process_list.vm
@@ -54,6 +54,7 @@
 			#end
 		</tbody>
 	</table>
+	<script src="assets/js/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 function onDelete(value){
 	if (confirm("确认删除！")) window.location = "admin/delete?deploymentId=" + value ;
