--- a/src/main/webapp/WEB-INF/vm/layout/layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/layout.vm
@@ -90,8 +90,8 @@
 							</a>
 						</li>
 						<li>
-							<a href="admin/process_list.html">
-								<span class="menu-text"> 流程定义列表 </span>
+							<a href="test_apply.html">
+								<span class="menu-text"> 申请测试 </span>
 							</a>
 						</li>
 
