--- a/src/main/webapp/WEB-INF/vm/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/apply.vm
@@ -41,8 +41,8 @@ td {
             <tr>
             	<td>是否直接向VP汇报</td>
                 <td><form action="" method="get">
-                <input name="Fruit" type="radio" style="width:25% !important"/><span style="width:10%">是</span>
-                <input name="Fruit" type="radio" checked="true" style="width:25% !important"/><span style="width:10%">否</<span>
+                <input name="Fruit" type="radio" checked="false" style="width:25% !important" value="是"/><span style="width:10%">是</span>
+                <input name="Fruit" type="radio" checked="true" style="width:25% !important" value="否"/><span style="width:10%">否</<span>
                 </form></td>
                 <td>银行卡号</td>
                 <td><input type="text"></td>
@@ -51,12 +51,10 @@ td {
             </tr>
             <tr>
                 <td>是否有借款</td>
-                <td>
-                <form action="" method="get">
-                <input name="Fruit" type="radio" style="width:25% !important"/><span style="width:10%">是</span>
-                <input name="Fruit" type="radio" checked="true" style="width:25% !important"/><span style="width:10%">否</<span>
-                </form>
-                </td>
+                <td><form action="" method="get">
+                <input name="Fruit" type="radio" checked="false" style="width:25% !important" value="是"/><span style="width:10%">是</span>
+                <input name="Fruit" type="radio" checked="true" style="width:25% !important" value="否"/><span style="width:10%">否</<span>
+                </form></td>
                 <td>借款单流水号</td>
                 <td><input type="text"></td>
                 <td>借款金额</td>
@@ -522,6 +520,33 @@ function subTableInfos(flag) {
         }
         tableMap[tableId] = list;
     }
+	//table 基本信息
+	var table = document.getElementById("table");
+	var list = new Array();
+	for(var i = 0; i < 4; i++){
+		list[i] = new Array();
+		var k = 0;
+		for(j = 1; j < 6; j+= 2){
+			if((i == 2 || i == 3) && j == 1){
+				var input = table.rows[i].cells[j].childNodes[0].childNodes;
+				var input1 = input[1];
+				var input2 = input[4];
+				if(input1.checked){
+					list[i][k] = input1.value;
+				}else if(input2.checked){
+					list[i][k] = input2.value;
+				}
+			}else{
+				list[i][k] = table.rows[i].cells[j].childNodes[0].value;
+			}
+			
+			if(isNull(list[i][k])){
+				list[i][k] = "";
+			}
+		}
+	}
+	tableMap["table"] = list;
+	
     params["vars"] = vars;
     params["tableMap"] = tableMap;
     params["flag"] = flag;
