--- a/src/main/webapp/WEB-INF/vm/my_apply.vm
+++ b/src/main/webapp/WEB-INF/vm/my_apply.vm
@@ -35,7 +35,7 @@
     </div>
     <div class="table-responsive" id="card_s">
         <div id="ems_table_wrapper" class="dataTables_wrapper" role="grid">
-            <table id="ems_table" class="table table-striped table-bordered table-hover dataTable"
+            <table id="apply_table" class="table table-striped table-bordered table-hover dataTable"
                    aria-describedby="ems_table_info" style="width: 100%;">
 
             </table>
@@ -45,75 +45,135 @@
 </div>
 </div>
 
+<script src="static/js/utils.js"></script>
+<script src="static/js/dialog_common.js"></script>
+<script src="static/ace/js/jquery.dataTables.min.js"></script>
+<script src="static/ace/js/jquery.dataTables.bootstrap.js"></script>
 <script language=JavaScript>
 
 jQuery(function ($) {
-    $.ajax({
-        dataType: 'json',
-        url: 'approve/get_process',
-        type: "GET",
-        success: function (resp) {
-        	console.log(resp);
-            var id = "key";
-            var len = resp.length;
-            //$("#" + id).find("option").remove();
-            //var opstr = $.parseStr('<option value="%s" selected="selected">%s</option>', value, value);
-            //$("#" + id).append(opstr);
-            var r_len = resp.length;
-            for (var i = 0; i < r_len; i++) {
-                opstr = $.parseStr('<option value="%s">%s</option>', resp[i], resp[i]);
-                $("#" + id).append(opstr);
-            }
-        },
-        error: function (jqXHR, textStatus, errorThrown) {
-            alert('网络错误，请刷新后重试!');
-        }
-    })
+    showInfo("oa/applyinfo");
 
 });
-function add_process_list() {
-	var expre = /http(s)?:////([\w-]+\.)+[\w-]+(\/[\w- .\/?%&=]*)?/; 
-	var regexp = new RegExp(expre); 
-	var url = $("#url").val();
-	if(!regexp.test(url)){
-		alert("url地址错误或含有非法字符，请检查");
-		return;
-	}
-    var params = {
-        "key": $("#key").val(),
-        "type": $("#type").val(),
-        "url": $("#url").val(),
-        "name": $("#name").val()
+//显示表格数据
+function showInfo(url) {
+    var ex = document.getElementById("apply_table");
+    if ($.fn.dataTable.fnIsDataTable(ex)) {
+        $(ex).dataTable().fnDestroy();
     }
-    
-    $.ajax({
-        contentType: "application/json; charset=utf-8",
-        url: 'approve/add/process',
-        type: "POST",
-        data: JSON.stringify(params),
-        success: function (resp) {
-            console.log(resp.data);
-            alert(resp.data);
-            window.location.reload();
+    var aoColumns = [
+        {
+            "sTitle": "员工编号"
         },
-        error: function (jqXHR, textStatus, errorThrown) {
-            alert('网络错误，请刷新后重试!');
+        {
+            "sTitle": "部门"
+        },
+        {
+            "sTitle": "姓名"
+        },
+        {
+            "sTitle": "申请日期"
+        },
+        {
+            "sTitle": "报销金额"
+        }
+    ];
+    var wh = $(window).height();
+    var sY = (wh - 100) + 'px';
+    var oTable = $(ex).dataTable({
+        "bFilter": false,
+        "bAutoWidth": true,
+        "bProcessing": false,
+        "bServerSide": true,
+        "sDom": 't<"row"<"col-sm-12"i>>',
+        "bSort": true,
+        "bScrollCollapse": true,
+        "iDisplayLength":20,
+        "iDisplayStart": 0,
+        "aoColumns": aoColumns,
+        "sAjaxSource": "",
+        "bScrollInfinite": true,
+        "sScrollY": sY,
+        "fnServerData": function (sSource, aDataSet, fnCallback) {
+            $.ajax({
+                "dataType": 'json',
+                "type": "POST",
+                "url": url,
+                "data": aDataSet,
+                "success": function (resp) {
+					console.log(resp);
+					var data = resp.data;
+                    var iTotalRecords = data.count || 0;
+                    var iTotalDisplayRecords = iTotalRecords;
+                    var aaData = showApplyInfo(data);
+                    var data = {
+                        "aaData": aaData,
+                        "iTotalRecords": (iTotalRecords || 0),
+                        "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
+                    };
+                    fnCallback(data);
+                },
+                error: function () {
+                    showCommonNoticeDialog('网络错误', 'icon-bolt',
+                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+                }
+            });
+        },
+        "fnDrawCallback": function () {
+            if (!oTable) {
+                return;
+            }
+            oTable.$('tr.row_selected').removeClass('row_selected');
+            oTable.$("tr").unbind('click');
+            oTable.$("tr").click({oTable: oTable}, function (e) {
+                if ($(this).hasClass('row_selected')) {
+                    $(this).removeClass('row_selected');
+                }
+                else {
+                    e.data.oTable.$('tr.row_selected').removeClass('row_selected');
+                    $(this).addClass('row_selected');
+                    var asset_id = e.data.oTable.fnGetData(this)[0];
+                    var asset_type = e.data.oTable.fnGetData(this)[2];
+                    var store_state = e.data.oTable.fnGetData(this)[5];
+                    showDetailPanel(asset_id, asset_type, store_state);
+                    showOperaInfo(asset_id);
+                }
+            });
         }
     })
 }
-function onDelete(value){
-	if (confirm("确认删除！")) window.location = "approve/delete?key=" + value ;
+
+function showApplyInfo(data) {
+    var aaData = [];
+    if (data) {
+        var d_len = data.count;
+		data = data.aaData;
+        for (var i = 0; i < d_len; i++) {
+            aaData.push([
+				data[0],
+				data[1],
+				data[2],
+				data[3],
+				data[4]
+            ]);
+        }
+    }
+    return aaData;
 }
 
-//替换方法
-(function ($) {
-    $.parseStr = function (str) {
-        var args = [].slice.call(arguments, 1),
-                i = 0;
-        return str.replace(/%s/g, function () {
-            return args[i++];
-        });
+$.extend(true, $.fn.dataTable.defaults, {
+    "sPaginationType": "bootstrap",
+    "oLanguage": {
+        "sEmptyTable": "无数据",
+        "sProcessing": "正在获取数据，请稍后...",
+        "oPaginate.sFirst": "第一页",
+        "oPaginate.sLast": "最后一页",
+        "oPaginate.sNext": "下一页",
+        "oPaginate.sPrevious": "上一页",
+        "sInfo": "本页 _START_ - _END_ , 共 _TOTAL_ 条记录",
+        "sInfoEmpty": "本页 0 - 0 , 共 0 条记录",
+        "sSearch": "搜索: ",
+        "sLengthMenu": "共_MENU_记录"
     }
-})(jQuery);
-	
+});
 </script>
