拆分管理和填写页面

--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -1,4 +1,4 @@
-#set($layout = "layout/layout.vm")
+#set($layout = "layout/oa_layout.vm")
 <style type="text/css">
 td input{
 	width: 100%;
@@ -9,6 +9,7 @@ td input{
 td {
 	text-align: center;
 }
+
 </style>
 <div id="common-notice-dialog" class="hide"></div>
 <div class="col-xs-12">
@@ -24,19 +25,19 @@ td {
         		id="table">
             <tr>
                 <td>申请人</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>员工编号</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>申请日期</td>
-                <td><input type="text"style="color:red"></td>
+                <td><input type="text"style="color:red" readonly="readonly"></td>
             </tr>
             <tr>
                 <td>一级部门</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>申请部门</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>部门编号</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
             </tr>
             <tr>
             	<td>是否直接向VP汇报</td>
@@ -45,9 +46,9 @@ td {
                 <input name="Fruit" type="radio" checked="true" style="width:25% !important" value="否"/><span style="width:10%">否</<span>
                 </form></td>
                 <td>银行卡号</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>银行开户行</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
             </tr>
             <tr>
                 <td>是否有借款</td>
@@ -56,9 +57,9 @@ td {
                 <input name="Fruit" type="radio" checked="true" style="width:25% !important" value="否"/><span style="width:10%">否</<span>
                 </form></td>
                 <td>借款单流水号</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
                 <td>借款金额</td>
-                <td><input type="text"></td>
+                <td><input type="text" readonly="readonly"></td>
             </tr>
             <tr>
         </table>
@@ -415,10 +416,10 @@ function addRow(tableId) { //读取最后一行的行号，存放在txtTRLastInd
     for (var i = 0; i < coLen - 1; i++) {
         var cell = nRow.insertCell(i);
         cell.innerHTML = table.rows[rowLen - 1].cells[i].innerHTML;
-        cell.childNodes[0].value = table.rows[rowLen - 1].cells[i].childNodes[0].value
-        if (tableId != "table5" && i == 0) {
-            cell.childNodes[0].childNodes[1].value = table.rows[rowLen - 1].cells[i].childNodes[0].childNodes[1].value
-        }
+//        cell.childNodes[0].value = table.rows[rowLen - 1].cells[i].childNodes[0].value
+//        if (tableId != "table5" && i == 0) {
+//            cell.childNodes[0].childNodes[1].value = table.rows[rowLen - 1].cells[i].childNodes[0].childNodes[1].value
+//        }
     }
     var cell = nRow.insertCell(coLen - 1);
     cell.innerHTML = "<div align='center' style='width:40px'><a href='javascript:;' " +
