--- a/src/main/webapp/WEB-INF/vm/layout/layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/layout.vm
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>报销系统-Admin</title>
+		<title>工作流引擎-Admin</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<base href="/oaengine/" />
@@ -90,13 +90,8 @@
 							</a>
 						</li>
 						<li>
-							<a href="apply.html">
-								<span class="menu-text"> 员工报销申请 </span>
-							</a>
-						</li>
-						<li>
-							<a href="my_apply.html">
-								<span class="menu-text"> 我的申请 </span>
+							<a href="admin/process_list.html">
+								<span class="menu-text"> 流程定义列表 </span>
 							</a>
 						</li>
 
