--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="main-container" id="main-container">
+		
 			<div class="main-container-inner">
 				<div class="sidebar" id="sidebar">
 					<ul class="nav nav-list">
@@ -94,32 +94,19 @@
 								<span class="menu-text"> 我的申请 </span>
 							</a>
 						</li>
-
-						<!--
-						<li>
-							<a href="admin/async_queue.html">
-								<span class="menu-text"> 任务队列 </span>
-							</a>
-						</li>
-						-->
-					</ul><!-- /.nav-list -->
+					</ul>
 				</div>
 				<div class="main-content">
 					<div class="page-content">
 						<div class="row">
 							<div class="col-xs-12">
-								<!-- PAGE CONTENT BEGINS -->
-								
-$screen_content
-
-								<!-- PAGE CONTENT ENDS -->
-							</div><!-- /.col -->
-						</div><!-- /.row -->
-					</div><!-- /.page-content -->
-				</div><!-- /.main-content -->
-			</div><!-- /.main-container-inner -->
-		</div><!-- /.main-container -->
-		
+									$screen_content
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script type="text/javascript">
 			jQuery(function($){
 			
